syntax = "proto3";
package fairyring.pep;

import "fairyring/pep/pub_key.proto";

option go_package = "github.com/FairBlock/fairyring/x/pep/types";

message PepPacketData {
    oneof packet {
        NoData noData = 1;
		    CurrentKeysPacketData currentKeysPacket = 2;
    }
}

message NoData {
}

// CurrentKeysPacketData defines a struct for the packet payload
message CurrentKeysPacketData {
}

// CurrentKeysPacketAck defines a struct for the packet acknowledgment
message CurrentKeysPacketAck {
    ActivePubKey activeKey = 2;
    QueuedPubKey queuedKey = 3;
}
